parser.output
Gramática

    0 $accept: program $end

    1 program: list_decl_fun

    2 list_decl_fun: decl_or_fun
    3              | list_decl_fun decl_or_fun

    4 decl_or_fun: fun
    5            | decl SEMICOLON
    6            | NEWLINE

    7 $@1: ε

    8 fun: FUN type ID LPAREN list_param_opt RPAREN LBRACE $@1 list_stmt RBRACE

    9 list_stmt: stmt
   10          | list_stmt stmt

   11 stmt: simple_stmt
   12     | compound_stmt
   13     | NEWLINE

   14 simple_stmt: decl SEMICOLON
   15            | assign_stmt SEMICOLON
   16            | return_stmt SEMICOLON
   17            | expression SEMICOLON

   18 compound_stmt: if_stmt
   19              | for_stmt
   20              | while_stmt

   21 while_stmt: WHILE LPAREN expression RPAREN LBRACE list_stmt RBRACE

   22 if_stmt: IF LPAREN expression RPAREN LBRACE list_stmt RBRACE
   23        | IF LPAREN expression RPAREN LBRACE list_stmt RBRACE ELSE LBRACE list_stmt RBRACE

   24 for_stmt: FOR LPAREN for_init SEMICOLON expression SEMICOLON assign_stmt RPAREN LBRACE list_stmt RBRACE

   25 for_init: decl
   26         | assign_stmt

   27 decl: type COLON ID
   28     | type COLON ID ASSIGNMENT expression

   29 type: TYPE
   30     | TYPE LBRACKET RBRACKET

   31 list_param_opt: ε
   32               | list_param

   33 list_param: param
   34           | param COMMA list_param

   35 param: type COLON ID

   36 return_stmt: RETURN expression

   37 assign_stmt: lvalue ASSIGNMENT expression
   38            | lvalue INCREMENT
   39            | lvalue DECREMENT

   40 lvalue: ID
   41       | lvalue LBRACKET expression RBRACKET

   42 expression: NUMBER
   43           | lvalue
   44           | STRING
   45           | LPAREN expression RPAREN
   46           | expression ADDITION expression
   47           | expression SUBTRACTION expression
   48           | expression MULTIPLICATION expression
   49           | expression DIVISION expression
   50           | expression EXPONENTIATION expression
   51           | expression SMALLER expression
   52           | expression BIGGER expression
   53           | expression SMALLEREQUALS expression
   54           | expression BIGGEREQUALS expression
   55           | expression EQUALS expression
   56           | SUBTRACTION expression
   57           | ID LPAREN arg_list_opt RPAREN
   58           | LEN LPAREN expression RPAREN
   59           | LBRACKET list_expression RBRACKET

   60 list_expression: expression
   61                | list_expression COMMA expression

   62 arg_list_opt: ε
   63             | arg_list

   64 arg_list: expression
   65         | arg_list COMMA expression


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    ID <str> (258) 8 27 28 35 40 57
    TYPE <str> (259) 29 30
    NUMBER <str> (260) 42
    STRING <str> (261) 44
    FUN (262) 8
    WHILE (263) 21
    FOR (264) 24
    IF (265) 22 23
    ELSE (266) 23
    LEN (267) 58
    RETURN (268) 36
    LBRACKET (269) 30 41 59
    RBRACKET (270) 30 41 59
    COMMA (271) 34 61 65
    LPAREN (272) 8 21 22 23 24 45 57 58
    RPAREN (273) 8 21 22 23 24 45 57 58
    COLON (274) 27 28 35
    SEMICOLON (275) 5 14 15 16 17 24
    NEWLINE (276) 6 13
    ASSIGNMENT (277) 28 37
    EQUALS (278) 55
    SMALLEREQUALS (279) 53
    BIGGEREQUALS (280) 54
    SMALLER (281) 51
    BIGGER (282) 52
    INCREMENT (283) 38
    DECREMENT (284) 39
    EXPONENTIATION (285) 50
    MULTIPLICATION (286) 48
    DIVISION (287) 49
    ADDITION (288) 46
    SUBTRACTION (289) 47 56
    LBRACE (290) 8 21 22 23 24
    RBRACE (291) 8 21 22 23 24
    UMINUS (292)
    LOWER_THAN_ELSE (293)


Não terminais com as regras onde eles aparecem

    $accept (39)
        à esquerda: 0
    program (40)
        à esquerda: 1
        à direita: 0
    list_decl_fun (41)
        à esquerda: 2 3
        à direita: 1 3
    decl_or_fun (42)
        à esquerda: 4 5 6
        à direita: 2 3
    fun (43)
        à esquerda: 8
        à direita: 4
    $@1 (44)
        à esquerda: 7
        à direita: 8
    list_stmt (45)
        à esquerda: 9 10
        à direita: 8 10 21 22 23 24
    stmt (46)
        à esquerda: 11 12 13
        à direita: 9 10
    simple_stmt (47)
        à esquerda: 14 15 16 17
        à direita: 11
    compound_stmt (48)
        à esquerda: 18 19 20
        à direita: 12
    while_stmt (49)
        à esquerda: 21
        à direita: 20
    if_stmt (50)
        à esquerda: 22 23
        à direita: 18
    for_stmt (51)
        à esquerda: 24
        à direita: 19
    for_init (52)
        à esquerda: 25 26
        à direita: 24
    decl (53)
        à esquerda: 27 28
        à direita: 5 14 25
    type <str> (54)
        à esquerda: 29 30
        à direita: 8 27 28 35
    list_param_opt (55)
        à esquerda: 31 32
        à direita: 8
    list_param (56)
        à esquerda: 33 34
        à direita: 32 34
    param (57)
        à esquerda: 35
        à direita: 33 34
    return_stmt (58)
        à esquerda: 36
        à direita: 16
    assign_stmt (59)
        à esquerda: 37 38 39
        à direita: 15 24 26
    lvalue <str> (60)
        à esquerda: 40 41
        à direita: 37 38 39 41 43
    expression <str> (61)
        à esquerda: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        à direita: 17 21 22 23 24 28 36 37 41 45 46 47 48 49 50 51 52 53 54 55 56 58 60 61 64 65
    list_expression <str> (62)
        à esquerda: 60 61
        à direita: 59 61
    arg_list_opt (63)
        à esquerda: 62 63
        à direita: 57
    arg_list (64)
        à esquerda: 64 65
        à direita: 63 65


Estado 0

    0 $accept: • program $end

    TYPE     deslocar, e ir ao estado 1
    FUN      deslocar, e ir ao estado 2
    NEWLINE  deslocar, e ir ao estado 3

    program        ir ao estado 4
    list_decl_fun  ir ao estado 5
    decl_or_fun    ir ao estado 6
    fun            ir ao estado 7
    decl           ir ao estado 8
    type           ir ao estado 9


Estado 1

   29 type: TYPE •
   30     | TYPE • LBRACKET RBRACKET

    LBRACKET  deslocar, e ir ao estado 10

    $padrão  reduzir usando a regra 29 (type)


Estado 2

    8 fun: FUN • type ID LPAREN list_param_opt RPAREN LBRACE $@1 list_stmt RBRACE

    TYPE  deslocar, e ir ao estado 1

    type  ir ao estado 11


Estado 3

    6 decl_or_fun: NEWLINE •

    $padrão  reduzir usando a regra 6 (decl_or_fun)


Estado 4

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 12


Estado 5

    1 program: list_decl_fun •
    3 list_decl_fun: list_decl_fun • decl_or_fun

    TYPE     deslocar, e ir ao estado 1
    FUN      deslocar, e ir ao estado 2
    NEWLINE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 1 (program)

    decl_or_fun  ir ao estado 13
    fun          ir ao estado 7
    decl         ir ao estado 8
    type         ir ao estado 9


Estado 6

    2 list_decl_fun: decl_or_fun •

    $padrão  reduzir usando a regra 2 (list_decl_fun)


Estado 7

    4 decl_or_fun: fun •

    $padrão  reduzir usando a regra 4 (decl_or_fun)


Estado 8

    5 decl_or_fun: decl • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 14


Estado 9

   27 decl: type • COLON ID
   28     | type • COLON ID ASSIGNMENT expression

    COLON  deslocar, e ir ao estado 15


Estado 10

   30 type: TYPE LBRACKET • RBRACKET

    RBRACKET  deslocar, e ir ao estado 16


Estado 11

    8 fun: FUN type • ID LPAREN list_param_opt RPAREN LBRACE $@1 list_stmt RBRACE

    ID  deslocar, e ir ao estado 17


Estado 12

    0 $accept: program $end •

    $padrão  aceitar


Estado 13

    3 list_decl_fun: list_decl_fun decl_or_fun •

    $padrão  reduzir usando a regra 3 (list_decl_fun)


Estado 14

    5 decl_or_fun: decl SEMICOLON •

    $padrão  reduzir usando a regra 5 (decl_or_fun)


Estado 15

   27 decl: type COLON • ID
   28     | type COLON • ID ASSIGNMENT expression

    ID  deslocar, e ir ao estado 18


Estado 16

   30 type: TYPE LBRACKET RBRACKET •

    $padrão  reduzir usando a regra 30 (type)


Estado 17

    8 fun: FUN type ID • LPAREN list_param_opt RPAREN LBRACE $@1 list_stmt RBRACE

    LPAREN  deslocar, e ir ao estado 19


Estado 18

   27 decl: type COLON ID •
   28     | type COLON ID • ASSIGNMENT expression

    ASSIGNMENT  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 27 (decl)


Estado 19

    8 fun: FUN type ID LPAREN • list_param_opt RPAREN LBRACE $@1 list_stmt RBRACE

    TYPE  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 31 (list_param_opt)

    type            ir ao estado 21
    list_param_opt  ir ao estado 22
    list_param      ir ao estado 23
    param           ir ao estado 24


Estado 20

   28 decl: type COLON ID ASSIGNMENT • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 33


Estado 21

   35 param: type • COLON ID

    COLON  deslocar, e ir ao estado 34


Estado 22

    8 fun: FUN type ID LPAREN list_param_opt • RPAREN LBRACE $@1 list_stmt RBRACE

    RPAREN  deslocar, e ir ao estado 35


Estado 23

   32 list_param_opt: list_param •

    $padrão  reduzir usando a regra 32 (list_param_opt)


Estado 24

   33 list_param: param •
   34           | param • COMMA list_param

    COMMA  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 33 (list_param)


Estado 25

   40 lvalue: ID •
   57 expression: ID • LPAREN arg_list_opt RPAREN

    LPAREN  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 40 (lvalue)


Estado 26

   42 expression: NUMBER •

    $padrão  reduzir usando a regra 42 (expression)


Estado 27

   44 expression: STRING •

    $padrão  reduzir usando a regra 44 (expression)


Estado 28

   58 expression: LEN • LPAREN expression RPAREN

    LPAREN  deslocar, e ir ao estado 38


Estado 29

   59 expression: LBRACKET • list_expression RBRACKET

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue           ir ao estado 32
    expression       ir ao estado 39
    list_expression  ir ao estado 40


Estado 30

   45 expression: LPAREN • expression RPAREN

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 41


Estado 31

   56 expression: SUBTRACTION • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 42


Estado 32

   41 lvalue: lvalue • LBRACKET expression RBRACKET
   43 expression: lvalue •

    LBRACKET  deslocar, e ir ao estado 43

    $padrão  reduzir usando a regra 43 (expression)


Estado 33

   28 decl: type COLON ID ASSIGNMENT expression •
   46 expression: expression • ADDITION expression
   47           | expression • SUBTRACTION expression
   48           | expression • MULTIPLICATION expression
   49           | expression • DIVISION expression
   50           | expression • EXPONENTIATION expression
   51           | expression • SMALLER expression
   52           | expression • BIGGER expression
   53           | expression • SMALLEREQUALS expression
   54           | expression • BIGGEREQUALS expression
   55           | expression • EQUALS expression

    EQUALS          deslocar, e ir ao estado 44
    SMALLEREQUALS   deslocar, e ir ao estado 45
    BIGGEREQUALS    deslocar, e ir ao estado 46
    SMALLER         deslocar, e ir ao estado 47
    BIGGER          deslocar, e ir ao estado 48
    EXPONENTIATION  deslocar, e ir ao estado 49
    MULTIPLICATION  deslocar, e ir ao estado 50
    DIVISION        deslocar, e ir ao estado 51
    ADDITION        deslocar, e ir ao estado 52
    SUBTRACTION     deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 28 (decl)


Estado 34

   35 param: type COLON • ID

    ID  deslocar, e ir ao estado 54


Estado 35

    8 fun: FUN type ID LPAREN list_param_opt RPAREN • LBRACE $@1 list_stmt RBRACE

    LBRACE  deslocar, e ir ao estado 55


Estado 36

   34 list_param: param COMMA • list_param

    TYPE  deslocar, e ir ao estado 1

    type        ir ao estado 21
    list_param  ir ao estado 56
    param       ir ao estado 24


Estado 37

   57 expression: ID LPAREN • arg_list_opt RPAREN

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 62 (arg_list_opt)

    lvalue        ir ao estado 32
    expression    ir ao estado 57
    arg_list_opt  ir ao estado 58
    arg_list      ir ao estado 59


Estado 38

   58 expression: LEN LPAREN • expression RPAREN

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 60


Estado 39

   46 expression: expression • ADDITION expression
   47           | expression • SUBTRACTION expression
   48           | expression • MULTIPLICATION expression
   49           | expression • DIVISION expression
   50           | expression • EXPONENTIATION expression
   51           | expression • SMALLER expression
   52           | expression • BIGGER expression
   53           | expression • SMALLEREQUALS expression
   54           | expression • BIGGEREQUALS expression
   55           | expression • EQUALS expression
   60 list_expression: expression •

    EQUALS          deslocar, e ir ao estado 44
    SMALLEREQUALS   deslocar, e ir ao estado 45
    BIGGEREQUALS    deslocar, e ir ao estado 46
    SMALLER         deslocar, e ir ao estado 47
    BIGGER          deslocar, e ir ao estado 48
    EXPONENTIATION  deslocar, e ir ao estado 49
    MULTIPLICATION  deslocar, e ir ao estado 50
    DIVISION        deslocar, e ir ao estado 51
    ADDITION        deslocar, e ir ao estado 52
    SUBTRACTION     deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 60 (list_expression)


Estado 40

   59 expression: LBRACKET list_expression • RBRACKET
   61 list_expression: list_expression • COMMA expression

    RBRACKET  deslocar, e ir ao estado 61
    COMMA     deslocar, e ir ao estado 62


Estado 41

   45 expression: LPAREN expression • RPAREN
   46           | expression • ADDITION expression
   47           | expression • SUBTRACTION expression
   48           | expression • MULTIPLICATION expression
   49           | expression • DIVISION expression
   50           | expression • EXPONENTIATION expression
   51           | expression • SMALLER expression
   52           | expression • BIGGER expression
   53           | expression • SMALLEREQUALS expression
   54           | expression • BIGGEREQUALS expression
   55           | expression • EQUALS expression

    RPAREN          deslocar, e ir ao estado 63
    EQUALS          deslocar, e ir ao estado 44
    SMALLEREQUALS   deslocar, e ir ao estado 45
    BIGGEREQUALS    deslocar, e ir ao estado 46
    SMALLER         deslocar, e ir ao estado 47
    BIGGER          deslocar, e ir ao estado 48
    EXPONENTIATION  deslocar, e ir ao estado 49
    MULTIPLICATION  deslocar, e ir ao estado 50
    DIVISION        deslocar, e ir ao estado 51
    ADDITION        deslocar, e ir ao estado 52
    SUBTRACTION     deslocar, e ir ao estado 53


Estado 42

   46 expression: expression • ADDITION expression
   47           | expression • SUBTRACTION expression
   48           | expression • MULTIPLICATION expression
   49           | expression • DIVISION expression
   50           | expression • EXPONENTIATION expression
   51           | expression • SMALLER expression
   52           | expression • BIGGER expression
   53           | expression • SMALLEREQUALS expression
   54           | expression • BIGGEREQUALS expression
   55           | expression • EQUALS expression
   56           | SUBTRACTION expression •

    $padrão  reduzir usando a regra 56 (expression)


Estado 43

   41 lvalue: lvalue LBRACKET • expression RBRACKET

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 64


Estado 44

   55 expression: expression EQUALS • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 65


Estado 45

   53 expression: expression SMALLEREQUALS • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 66


Estado 46

   54 expression: expression BIGGEREQUALS • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 67


Estado 47

   51 expression: expression SMALLER • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 68


Estado 48

   52 expression: expression BIGGER • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 69


Estado 49

   50 expression: expression EXPONENTIATION • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 70


Estado 50

   48 expression: expression MULTIPLICATION • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 71


Estado 51

   49 expression: expression DIVISION • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 72


Estado 52

   46 expression: expression ADDITION • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 73


Estado 53

   47 expression: expression SUBTRACTION • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 74


Estado 54

   35 param: type COLON ID •

    $padrão  reduzir usando a regra 35 (param)


Estado 55

    8 fun: FUN type ID LPAREN list_param_opt RPAREN LBRACE • $@1 list_stmt RBRACE

    $padrão  reduzir usando a regra 7 ($@1)

    $@1  ir ao estado 75


Estado 56

   34 list_param: param COMMA list_param •

    $padrão  reduzir usando a regra 34 (list_param)


Estado 57

   46 expression: expression • ADDITION expression
   47           | expression • SUBTRACTION expression
   48           | expression • MULTIPLICATION expression
   49           | expression • DIVISION expression
   50           | expression • EXPONENTIATION expression
   51           | expression • SMALLER expression
   52           | expression • BIGGER expression
   53           | expression • SMALLEREQUALS expression
   54           | expression • BIGGEREQUALS expression
   55           | expression • EQUALS expression
   64 arg_list: expression •

    EQUALS          deslocar, e ir ao estado 44
    SMALLEREQUALS   deslocar, e ir ao estado 45
    BIGGEREQUALS    deslocar, e ir ao estado 46
    SMALLER         deslocar, e ir ao estado 47
    BIGGER          deslocar, e ir ao estado 48
    EXPONENTIATION  deslocar, e ir ao estado 49
    MULTIPLICATION  deslocar, e ir ao estado 50
    DIVISION        deslocar, e ir ao estado 51
    ADDITION        deslocar, e ir ao estado 52
    SUBTRACTION     deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 64 (arg_list)


Estado 58

   57 expression: ID LPAREN arg_list_opt • RPAREN

    RPAREN  deslocar, e ir ao estado 76


Estado 59

   63 arg_list_opt: arg_list •
   65 arg_list: arg_list • COMMA expression

    COMMA  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 63 (arg_list_opt)


Estado 60

   46 expression: expression • ADDITION expression
   47           | expression • SUBTRACTION expression
   48           | expression • MULTIPLICATION expression
   49           | expression • DIVISION expression
   50           | expression • EXPONENTIATION expression
   51           | expression • SMALLER expression
   52           | expression • BIGGER expression
   53           | expression • SMALLEREQUALS expression
   54           | expression • BIGGEREQUALS expression
   55           | expression • EQUALS expression
   58           | LEN LPAREN expression • RPAREN

    RPAREN          deslocar, e ir ao estado 78
    EQUALS          deslocar, e ir ao estado 44
    SMALLEREQUALS   deslocar, e ir ao estado 45
    BIGGEREQUALS    deslocar, e ir ao estado 46
    SMALLER         deslocar, e ir ao estado 47
    BIGGER          deslocar, e ir ao estado 48
    EXPONENTIATION  deslocar, e ir ao estado 49
    MULTIPLICATION  deslocar, e ir ao estado 50
    DIVISION        deslocar, e ir ao estado 51
    ADDITION        deslocar, e ir ao estado 52
    SUBTRACTION     deslocar, e ir ao estado 53


Estado 61

   59 expression: LBRACKET list_expression RBRACKET •

    $padrão  reduzir usando a regra 59 (expression)


Estado 62

   61 list_expression: list_expression COMMA • expression

    ID           deslocar, e ir ao estado 25
    NUMBER       deslocar, e ir ao estado 26
    STRING       deslocar, e ir ao estado 27
    LEN          deslocar, e ir ao estado 28
    LBRACKET     deslocar, e ir ao estado 29
    LPAREN       deslocar, e ir ao estado 30
    SUBTRACTION  deslocar, e ir ao estado 31

    lvalue      ir ao estado 32
    expression  ir ao estado 79


Estado 63

   45 expression: LPAREN expression RPAREN •

    $padrão  reduzir usando a regra 45 (expression)


Estado 64

   41 lvalue: lvalue LBRACKET expression • RBRACKET
   46 expression: expression • ADDITION expression
   47           | expression • SUBTRACTION expression
   48           | expression • MULTIPLICATION expression
   49           | expression • DIVISION expression
   50           | expression • EXPONENTIATION expression
   51           | expression • SMALLER expression
   52           | expression • BIGGER expression
   53           | expression • SMALLEREQUALS expression
   54           | expression • BIGGEREQUALS expression
   55           | expression • EQUALS expression

    RBRACKET        deslocar, e ir ao estado 80
    EQUALS          deslocar, e ir ao estado 44
    SMALLEREQUALS   deslocar, e ir ao estado 45
    BIGGEREQUALS    deslocar, e ir ao estado 46
    SMALLER         deslocar, e ir ao estado 47
    BIGGER          deslocar, e ir ao estado 48
    EXPONENTIATION  deslocar, e ir ao estado 49
    MULTIPLICATION  deslocar, e ir ao estado 50
    DIVISION        deslocar, e ir ao estado 51
    ADDITION        deslocar, e ir ao estado 52
    SUBTRACTION     deslocar, e ir ao estado 53


Estado 65

   46 expression: expression • ADDITION expression
   47           | expression • SUBTRACTION expression
   48           | expression • MULTIPLICATION expression
   49           | expression • DIVISION expression
   50           | expression • EXPONENTIATION expression
   51           | expression • SMALLER expression
   52           | expression • BIGGER expression
   53           | expression • SMALLEREQUALS expression
   54           | expression • BIGGEREQUALS expression
   55           | expression • EQUALS expression
   55           | expression EQUALS expression •
